# Starship

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LAUNCH.md  LICENSE  PLAN.md  README.md  REQUIREMENTS.md  deploy.sh  docker-compose.yml  requirements.txt  setup.sh
.githooks/: pre-commit
.sqlx/: query-0c1b03e4f032618d50d1d6be5961f08a84398134d3b62acb0985758e88a56b35.json  query-0d8894548e59d9c650b0633378862ef3a63f77bed13eff0823fc399715447950.json  query-160bab546ca5923a54f8e3dd3961641cfb49a2d076ae6717d4ac49fdf8fef4a6.json  query-16d31d9846b5079ef778ea0dc748eaf3c26023b32b32cade467f1e7de4d8248c.json  query-20c5e119187fc91e7162c458896af486fe1012f76ce4dc0dcacf48d5a51a386c.json  query-20d7c4bf01ca0dbde11cbb1b1d891052f614148c1e79d9af504fb989dbd68ca4.json  query-29677f941ae78322db0df47674d98ce54cdb47c405c5597673464b1e4aadbc80.json  query-2e5b2ea366dd82e3a3c4729db781918681b4dd3d7dc5e4a901f56fcd6662d61d.json  query-2f463de302b0f62297a3a400b159a21e6ea3c1f6fee7c65f1aa0f65a350ae9e5.json  query-32dab818c3b6d222b23e688e86fc33a6341e043eae7dad65022fa9c287262d3d.json  query-40e697e7a93a59a474eddaf2342bfccbcb7c28a23fdd8e6a5210ae36c17ee74f.json  query-436b70576e262be9ae6a07c597cdc6aca1f677242bc56cbcd8b4509fae5bc1e3.json  query-4f1585f71cfcb719f6cd646c1f359f6068bdd57a8758c493894a5bc47832ff51.json  query-503f8f80576384191f0d3d09034b72faf703afaedc1527e6f7f63dfab895cdf6.json  query-6cac6e3fd75548615125cf44e0d2b812c815911881f51a5ec0e79822d86c2de5.json  query-74c2ab7ace99ad5d8983dcc97431ed4fca9bcea7b845889fb49c3c68d1f10bcd.json  query-7573224ee5b53eeb14969bc45edf11bc4538171f877cb8ff784f81ca7a8be224.json  (+32 more)
(+111 files in other folders)
