[package]
name = "starship"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Discord bot for organising RotMG raids"
license = "MIT"

[[bin]]
name = "starship"
path = "src/main.rs"

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "utils",
    "voice",
    "rustls_backend",
    "collector",
] }
poise = "0.6"
songbird = { version = "0.4", features = ["serenity", "driver"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "migrate",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / scraping
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
scraper = "0.20"
url = "2"

# Image processing for emoji upload
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
futures = "0.3"
once_cell = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
